compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__missing_variable_in_alternative_pattern.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case [] { [x] | [] -> x _ -> 0 }"

---

error: Missing alternative pattern variable
  ┌─ /src/one/two.gleam:1:11
  │
1 │ case [] { [x] | [] -> x _ -> 0 }
  │           ^^^^^^^^^^^^^ does not define all required variables

All alternative patterns must define the same variables as the initial
pattern, but the `x` variable is missing.

